--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,22 +1,30 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
-    margin: 3rem 5rem;
-    padding: 0;
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-family: 'Plus Jakarta Sans', sans-serif;
+  /* margin: 3rem 5rem; */
+  /* text-align: center; */
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-h1{
-    @apply
-    text-5xl font-bold leading-normal text-black
+@layer base {
+  body {
+    @apply text-xl text-black;
+  }
+
+  h1 {
+    @apply text-5xl font-bold leading-normal text-black;
+  }
+
+  /* p {
+    @apply font-normal text-xl opacity-70 mt-8;
+  } */
 }
 
-p{
-    @apply
-    font-normal text-xl opacity-70 mt-8
-}
-
-.btn{
+/* .btn{
     @apply
     py-5 px-10  font-semibold text-lg rounded-full
-}
+} */
