chore: update section hero and restyling layout

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -82,4 +82,12 @@
   .card-services > div {
     width: 100%;
   }
+
+  .content-hero{
+    max-width: 100% !important;
+  }
+
+  .box{
+    flex-direction: column;
+  }
 }
