--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -46,6 +46,11 @@
   width: 30%;
 }
 
+.actived{
+  @apply
+  font-bold 
+}
+
 @media only screen and (max-width: 768px) {
   body {
     overflow-x: hidden;
@@ -77,6 +82,10 @@
 
   h1 {
     font-size: 2rem !important;
+  }
+
+  h2{
+    font-size: 15px;
   }
 
   .card-services > div {
