contact us page

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -56,9 +56,9 @@
     overflow-x: hidden;
   }
 
-  #root {
+  /* #root {
     margin: 3rem;
-  }
+  } */
 
   .box {
     flex-direction: column !important;
@@ -76,9 +76,9 @@
     margin-top: 2rem !important;
   }
 
-  section {
+  /* section {
     margin-top: 6rem !important;
-  }
+  } */
 
   h1 {
     font-size: 2rem !important;
